# SprigAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: sprigprune.md
docs/: README.md  contextproof-final-plan.md  sprigagent-final-plan.md  vibecoding-agents-capstone-COMPREHENSIVE.md
src/sprigagent/: __init__.py  __main__.py  apply.py  detect.py  github_client.py  main.py  orchestrate.py  pipeline.py  rewrite.py  types.py
src/sprigagent/agents/: __init__.py  detector.py  eval_runner.py  orchestrator.py  rewriter.py
src/sprigagent/eval/: __init__.py  __main__.py  cache.py  candidates.py  driver.py  grader.py  harness.py  sandbox.py  selection.py  tasks.py  tokens.py
src/sprigagent/model/: __init__.py  provider.py
src/sprigagent/security/: __init__.py  checkpoint.py
src/sprigagent/ui/: __init__.py  __main__.py  app.py  render.py
testbed/sprig-demo/: .eslintrc.json  AGENTS.md  CLAUDE.md  GEMINI.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
testbed/sprig-demo/.sprigagent/: PLANTED-ISSUES.md  vitest.eval.config.ts
testbed/sprig-demo/.sprigagent/tasks/: tasks.json
testbed/sprig-demo/.sprigagent/tasks/001-split-evenly/: task.json  task.md  test.test.ts
testbed/sprig-demo/src/: currency.ts  discount.ts  index.ts  invoice.ts  tax.ts  validate.ts
testbed/sprig-demo/tests/: currency.test.ts  discount.test.ts  invoice.test.ts  tax.test.ts
tests/: test_apply.py  test_detect.py  test_detector_agent.py  test_github_mcp.py  test_orchestrate.py  test_pipeline_smoke.py  test_rewrite.py  test_rewriter_agent.py  test_security_checkpoint.py  test_ui.py
tests/eval/: conftest.py  test_detector_integration.py  test_driver_security.py  test_harness_discrimination.py  test_orchestrator_integration.py  test_proof_honors_file.py  test_replay.py  test_replay_proof.py  test_rewriter_integration.py  test_sandbox_isolation.py  test_vertex_realpath.py
tests/eval/fixtures/001-split-evenly/: naive.patch  reference.patch
tests/eval/fixtures/002-allocate-proportional/: naive.patch  reference.patch
tests/eval/fixtures/003-format-eur/: reference.patch
tests/eval/fixtures/004-valid-quantity/: reference.patch
(+9 files in other folders)
